--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,14 @@
       <hr>
       <app-warning-alert></app-warning-alert>
       <app-success-alert></app-success-alert>
+      <hr>
+      <label>UserName</label>
+      <input type="text" class="form-control" [(ngModel)]="username">
+      <p>{{username}}</p>
+      <button
+        class="btn btn-primary"
+        [disabled]="username === ''"
+        (click)="username = ''">Reset User</button>
     </div>
   </div>
 </div>
